# wc-rs

./: .gitignore  ARM64_SIMD_RESEARCH.md  Cargo.toml  LICENSE  TODO.md  WC_IMPLEMENTATION_NOTES.md  build.rs  x86_AMD64_SIMD_RESEARCH.md
.github/workflows/: ci.yml
fuzz/: .gitignore  Cargo.toml  FUZZING.md  README.md  init_corpus.sh
fuzz/fuzz_targets/: fuzz_counter_overflow.rs  fuzz_simd_consistency.rs  fuzz_utf8.rs  fuzz_word_boundaries.rs  fuzz_word_count.rs
fuzz/seeds/: ascii.txt  incomplete_utf8.txt  invalid_utf8.txt  utf8.txt  whitespace.txt
fuzz/src/: fuzz_runner.rs
proptest-regressions/: wc_default_test.txt
src/: lib.rs  main.rs  wc_amd64.rs  wc_arm64.rs  wc_arm64_old.rs  wc_arm64_sve.c  wc_arm64_test.rs  wc_default.rs  wc_default_test.rs  wc_sve.c  wc_x86.rs  wc_x86_old.rs  wc_x86_test.rs
src/lib/: lib.rs  wc_arm64.rs  wc_arm64_test.rs  wc_default_test.rs  wc_x86.rs  wc_x86_test.rs
